[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Util/RangeControl.gd" type="Script" id=3]

[node name="RangeControl" type="HBoxContainer"]
margin_right = 65.0
margin_bottom = 21.0
size_flags_horizontal = 10
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MuteButton" parent="." instance=ExtResource( 2 )]
margin_right = 30.0
margin_bottom = 21.0
rect_min_size = Vector2( 24, 0 )
rect_pivot_offset = Vector2( 12, 10 )
text = "MUTE"
disableHoverAnim = true

[node name="SubtractButton" parent="." instance=ExtResource( 2 )]
margin_left = 34.0
margin_right = 58.0
margin_bottom = 21.0
rect_min_size = Vector2( 24, 0 )
rect_pivot_offset = Vector2( 12, 10 )
text = "-"
disableHoverAnim = true

[node name="Label" type="Label" parent="."]
margin_left = 62.0
margin_top = 6.0
margin_right = 71.0
margin_bottom = 15.0
text = "10"

[node name="AddButton" parent="." instance=ExtResource( 2 )]
margin_left = 75.0
margin_right = 99.0
margin_bottom = 21.0
rect_min_size = Vector2( 24, 0 )
rect_pivot_offset = Vector2( 12, 10 )
text = "+"
disableHoverAnim = true
